tests/dataset/tpc-ds/compiler/c/q7.error
/tmp/q7.c: In function ‘test_TPCDS_Q7_result’:
/tmp/q7.c:256:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  256 |   if (test_TPCDS_Q7_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/q7.c:260:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  260 |       if (test_TPCDS_Q7_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/q7.c: In function ‘main’:
/tmp/q7.c:325:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  325 |   test_TPCDS_Q7_result_result = result;
      |                                 ^~~~~~
